--- a/src/style.css
+++ b/src/style.css
@@ -144,3 +144,49 @@ body {
 .contact {
     margin-top: 10rem;
 }
+
+.menu {
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    padding: 3rem;
+    display: flex;
+    flex-direction: row;
+}
+
+.menu-item {
+    width: 100%;
+    padding: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 6rem;
+}
+
+.menu-image {
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('./assets/mcitemframe.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.menu-sign {
+    margin: auto;
+    --scale: 1;
+    background-image: url('https://file.garden/X1htvgJ0DEp_tp-Z/MSPFA%20other/Minecraft/636163130158286359.png');
+    background-size: contain;
+    --padding: calc(var(--scale) * 5px);
+    height: calc(var(--scale) * (96px - 2 * var(--padding)));
+    width: calc(var(--scale) * (192px - 2 * var(--padding)));
+    text-align: center;
+    font-size: calc(var(--scale) * 18px);
+    padding: var(--padding);
+    font-size: 1.25rem;
+    
+    display: flex;
+    flex-direction: column;
+}
